build_log.txt

> Configure project :
Fabric Loom: 1.10.5

> Task :compileJava
C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\module\list\combat\rotations\NeuroRotation.java:56: error: cannot find symbol
            deltaYaw = MathHelper.clamp(targetDeltaYaw, -55.0f, 55.0f);
                                        ^
  symbol:   variable targetDeltaYaw
  location: class NeuroRotation
C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\module\list\combat\rotations\NeuroRotation.java:57: error: cannot find symbol
            deltaPitch = MathHelper.clamp(targetDeltaPitch, -35.0f, 35.0f);
                                          ^
  symbol:   variable targetDeltaPitch
  location: class NeuroRotation
C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\util\commands\defaults\AICommand.java:161: error: method getString in interface IArgConsumer cannot be applied to given types;
        if (args.has(2) && args.getString(0).equalsIgnoreCase("start")) {
                               ^
  required: no arguments
  found:    int
  reason: actual and formal argument lists differ in length
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/plsmeow/Desktop/mc/Moonward%201.21.4%20beta/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\util\commands\defaults\AICommand.java:161: error: method getString in interface IArgConsumer cannot be applied to given types;
          if (args.has(2) && args.getString(0).equalsIgnoreCase("start")) {
                                 ^
    required: no arguments
    found:    int
    reason: actual and formal argument lists differ in length
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\module\list\combat\rotations\NeuroRotation.java:56: error: cannot find symbol
              deltaYaw = MathHelper.clamp(targetDeltaYaw, -55.0f, 55.0f);
                                          ^
    symbol:   variable targetDeltaYaw
    location: class NeuroRotation
  C:\Users\plsmeow\Desktop\mc\Moonward 1.21.4 beta\src\main\java\tech\onetap\module\list\combat\rotations\NeuroRotation.java:57: error: cannot find symbol
              deltaPitch = MathHelper.clamp(targetDeltaPitch, -35.0f, 35.0f);
                                            ^
    symbol:   variable targetDeltaPitch
    location: class NeuroRotation
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.0.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 37s
1 actionable task: 1 executed
